--- a/app/src/main/res/layout/activity_anime_page.xml
+++ b/app/src/main/res/layout/activity_anime_page.xml
@@ -67,12 +67,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="start" />
         </FrameLayout>
 
         <FrameLayout
@@ -95,15 +89,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/animImg"
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/cardView3"
                             android:layout_width="120dp"
                             android:layout_height="180dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
+                            app:cardBackgroundColor="#CC000000"
+                            app:cardCornerRadius="5dp"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/ic_baseline_broken_image_24" />
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <ImageView
+                                android:id="@+id/animImg"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:srcCompat="@drawable/ic_baseline_broken_image_24" />
+
+                        </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -111,10 +114,10 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginEnd="16dp"
                             android:orientation="vertical"
-                            app:layout_constraintBottom_toBottomOf="@+id/animImg"
+                            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/animImg"
-                            app:layout_constraintTop_toTopOf="@+id/animImg">
+                            app:layout_constraintStart_toEndOf="@+id/cardView3"
+                            app:layout_constraintTop_toTopOf="@+id/cardView3">
 
                             <TextView
                                 android:id="@+id/aniTitle"
@@ -170,7 +173,7 @@
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/animImg" />
+                            app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
                         <TextView
                             android:id="@+id/aniRate"
@@ -206,13 +209,24 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end">
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="end" />
         </FrameLayout>
 
     </com.discord.panels.OverlappingPanelsLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/aniProg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardBackgroundColor="#F2000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
